--- a/zulu_bank_notebook.ipynb
+++ b/zulu_bank_notebook.ipynb
@@ -9532,7 +9532,7 @@
     "# Get the connection\n",
     "conn = get_db_connection()\n",
     "\n",
-    "# Optional: You can test with a cursor if needed\n",
+    "# Check if the connection was successful\n",
     "if conn:\n",
     "    cursor = conn.cursor()\n",
     "    cursor.execute(\"SELECT version();\")\n",
